	(wxtApp::LoadCursor): Routine to initialize a cursor.

	* src/wxterminal/wxt_gui.cpp
	(wxtApp::LoadCursor): Likewise.
	(wxtApp::OnInit, wxt_set_cursor): Use new cursors.
	(wxt_reset): Clear the events list when receiving ctrl-c.
	(wxtPanel::DrawToDC): Fix zoom strings on Windows.

	* src/wxterminal/gp_cairo.c (gp_cairo_linetype2color): Fix modulo
	operator to use the whole nine colors.

	* configure.in (CPPFLAGS): Remove useless gtk and wxWidgets flags
	from the cppflags.

2006-05-15  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/makefile.os2: Define GIF_ANIMATION and HAVE_PDFLIB_H.

	* config/config.os2: Sync to config.h created by `configure`. Define
	EAM_OBJECTS, GP_STRING_VARS = 2, HIDDEN3D_VAR_PTSIZE and
	WITH_IMAGE_VERIFY_ALL_PIXEL_LOCATIONS,

	* src/os2/gclient.c (DisplayClientWndProc): Filter out WM_MOUSEMOVE
	events when the mouse hasn't been really moved. This eliminates
	excessive calls to gp_exec_event(GE_motion, ...) and subsequent
	unnecessary redraws of the plot.

2006-05-13  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/makefile.nt: Make sure that the same (basic) compiler options
	are used for compiling wgnuplot and pgnuplot. This is necessary since
	they both contain version.c.

	* src/stdfn.h src/win/winmain.h src/win/wpause.c:  Implementation of a
	non-blocking sleep function (gnuplot's 'pause' command) for windows.

	* term/win.trm (WIN_options, help text):
	Accept font request strings of the form
	    set term win ... font "<fontface>,<fontsize>"
	Previous syntax
	    set term win ... "<fontface>" <fontsize>
	remains valid as well. Update documentation.

	* src/os2/4allterm.cmd: Fix broken argument parsing. Convert end of line
	to CR/LF pairs. This is a must for the script to be readable by the OS/2
	REXX interpreter.

	* docs/doc2ipf.c docs/titlepag.ipf:
	- Increase depth of table of contents from 5 to 6. This fixes
	  "unknown reference" errors during compilation.
	- Only replace '.' in first column by ipf tag, it's not needed